# caustic

./: .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  environment.yml  postBuild.sh  start
.devcontainer/cuda/: devcontainer.json
.github/workflows/: cd.yml  ci.yml  coverage.yaml  documentation.yaml  image_ci.yml  python-app.yml
caustic/: cosmology.py  namespace_dict.py  parameter.py  parametrized.py  utils.py
caustic/lenses/: base.py  epl.py  external_shear.py  mass_sheet.py  multiplane.py  nfw.py  pixelated_convergence.py  point.py  pseudo_jaffe.py  sie.py  singleplane.py  sis.py  tnfw.py  utils.py
caustic/light/: base.py  sersic.py
caustic/sims/: lens_source.py
docs/: get_start.ipynb  tutorials.rst
docs/jupyter_book/: _config.yml  _toc.yml  get_start.ipynb  intro.md
docs/source/: _toc.yml  caustics_api_design_doc.md  code_of_conduct.rst  conf.py  glossary.rst  index.rst  tutorials.rst
docs/testbook/: InvertLensEquation.ipynb  LensZoo.ipynb  MultiplaneDemo.ipynb  VisualizeCaustics.ipynb  (+6 more)
jupyter_book/: _config.yml  _toc.yml  intro.md
testbook/: _config.yml  _toc.yml  get_start.ipynb  intro.md  tutorials.md  tutorials.rst
tests/: test_base.py  test_batching.py  test_cosmology.py  test_interpolate_image.py  test_io.py  test_jacobian_lens_equation.py  test_kappa_grid.py  test_masssheet.py  test_multiplane.py  test_namespace_dict.py  test_nfw.py  test_parameter.py  test_parametrized.py  test_pseudo_jaffe.py  test_sersic.py  test_simulator.py  test_tnfw.py  utils.py
(+77 files in other folders)
